# inferencelab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md
experiments/01_speculative_decoding/: README.md  run.py
experiments/02_continuous_batching/: README.md  run.py
experiments/03_kv_cache/: README.md  paged_allocator.py  run.py
experiments/04_quantization/: README.md  run.py
experiments/05_scheduler/: README.md  run.py
inferencelab/: __init__.py  cli.py
inferencelab/bench/: __init__.py
inferencelab/models/: __init__.py
inferencelab/serving/: __init__.py  scheduler.py  speculative.py
inferencelab/viz/: __init__.py
tests/: test_bench.py  test_scheduler.py
writeups/: 01_what_i_learned.md
